fix:fixed items overlapping

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,6 @@
   margin-top: 60px;
   overflow-x: hidden;
 }
-.samsung {
+/* .samsung {
   overflow-x: hidden;
-}
+} */
